[gd_scene load_steps=4 format=3 uid="uid://bykjww0q0dnuq"]

[ext_resource type="PackedScene" uid="uid://do5edktw5kw7f" path="res://classes/base_enemy.tscn" id="1_e1rg1"]
[ext_resource type="Script" path="res://cenes/enemies/woody.gd" id="2_wyhio"]
[ext_resource type="PackedScene" uid="uid://cvb8hk3kmkfle" path="res://cenes/bullet.tscn" id="3_x7tdp"]

[node name="Woody" instance=ExtResource("1_e1rg1")]
script = ExtResource("2_wyhio")
Bullet = ExtResource("3_x7tdp")

[node name="CollisionVision" parent="Radar" index="1"]
rotation = 0.0103545
polygon = PackedVector2Array(-1.33172, 0.545398, 117.675, -28.5876, 122.808, 2.86447)

[node name="Marker" type="Marker2D" parent="." index="6"]
position = Vector2(14, 0)

[node name="Timer" type="Timer" parent="." index="7"]
wait_time = 0.5

[connection signal="body_entered" from="Radar" to="." method="_on_radar_entered"]
[connection signal="body_exited" from="Radar" to="." method="_on_radar_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
